deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vchat-web
  labels:
    app.kubernetes.io/name: vchat
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vchat
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: vchat-metrics
  labels:
    app.kubernetes.io/name: vchat
    app.kubernetes.io/component: metrics
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vchat
    app.kubernetes.io/component: web
  ports:
    - name: metrics
      port: 9080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: vchat-blackhole
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
