deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vchat
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  rules:
    - host: vchat.example.com
      http:
        paths:
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: vchat-blackhole
                port:
                  name: http
          - path: /metrics/
            pathType: Prefix
            backend:
              service:
                name: vchat-blackhole
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vchat-web
                port:
                  name: http
